--- a/public/index.html
+++ b/public/index.html
@@ -72,11 +72,11 @@
                 Разрабатываем лендинги и&nbsp;сайты. Создаём логотипы и&nbsp;фирменные стили. SEO-продвижение и&nbsp;настройка рекламы ведутся на&nbsp;основе тщательного анализа 
                  ниши и&nbsp;конкурентов.
               </p>
-              <button class="btn btn--has-icon" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Обсудить проект
-                <svg class="btn__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -31 512 512" width="16px" height="16px">
-                  <path fill="#c1ea1d" d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0"></path>
-                </svg>
-              </button>
+                  <button class="btn btn--has-icon" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Обсудить проект
+                    <svg class="btn__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -31 512 512" width="16px" height="16px">
+                      <path fill="#c1ea1d" d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0"></path>
+                    </svg>
+                  </button>
             </div>
           </div>
         </div>
@@ -131,7 +131,8 @@
           <div class="col-6 col-xs-12 text-xs-center">
             <h4 class="text-uppercase">Новое в&nbsp;нашем портфолио</h4>
           </div>
-          <div class="col-6 col-xs-12 text-right text-xs-left mt-xs-2"><a class="btn btn_action btn--small" href="portfolio.html">Все проекты</a></div>
+          <div class="col-6 col-xs-12 text-right text-xs-left mt-xs-2"><a class="btn btn_action btn--small" href="portfolio.html">Все проекты</a>
+          </div>
         </div>
         <div class="portfolio portfolio_large mt-3 mt-xs-1"><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/corp-page.jpg"/>
                 <p class="portfolio__title text-small text-bold text-uppercase">EuroComm</p>
@@ -161,7 +162,8 @@
               а&nbsp;помогаем привлечь клиентов на&nbsp;сайт.
             </p>
           </div>
-          <div class="col-4 col-lg-10 col-sm-12 text-right text-lg-left mt-lg-2"><a class="btn btn_action btn--small" href="price.html">Наши услуги</a></div>
+          <div class="col-4 col-lg-10 col-sm-12 text-right text-lg-left mt-lg-2"><a class="btn btn_action btn--small" href="service.html">Наши услуги</a>
+          </div>
         </div>
         <div class="service mt-3">
           <div class="item item_service service__col service__col--first">
