--- a/public/logo.html
+++ b/public/logo.html
@@ -63,7 +63,239 @@
       </div>
     </nav>
     <div class="container">
-      <section class="container__inner mb-5"></section>
+      <section class="container__inner mb-5">
+        <div class="content-main">
+          <h1 class="content-main__title"> <span class="text-green">Got</span>овы создать для вас потрясающий 
+            логотип
+          </h1><span class="content-main__subtitle">graphic design</span>
+          <div class="row justify-content-end mt-3">
+            <div class="col-5">
+              <p class="content-main__intro">
+                В результате вы получите подробное руководство по использованию вашего нового стиля: фирменные цвета, шрифты и стилеобразующие элементы.</p>
+              <button class="btn btn--has-icon" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Обсудить проект
+                <svg class="btn__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -31 512 512" width="16px" height="16px">
+                  <path fill="#c1ea1d" d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0"></path>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="row pt-5 pt-sm-3 pb-3 pb-lg-2">
+          <div class="col-4 col-lg-8 col-md-7 col-xs-12">
+            <h2 class="h3 mb-0">Как проходит <span class="text-green">процесс </span>разработки?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4 col-lg-10 col-sm-12 mb-lg-3">
+            <p class="content-main__intro">
+              Для начала вы оставите заявку и&nbsp;мы свяжемся с&nbsp;вами, чтобы вы&nbsp;рассказали о&nbsp;своём проекте. Мы вместе заполним бриф, обменяемся мнениями  
+              о&nbsp;возможных направлениях в&nbsp;дизайне.
+            </p>
+          </div>
+          <div class="col-8 col-lg-12">
+            <div class="row">
+              <div class="col-6 col-xs-12 item">
+                <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Дизайн-исследование</div>
+                <div class="item__intro">
+                  Проводим обзор дизайна и контента конкурентов. Анализируем используемые цветовые схемы, графические образы и доминирующие мотивы.</div>
+              </div>
+              <div class="col-6 col-xs-12 item mt-sm-2">
+                <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Moodboard</div>
+                <div class="item__intro">
+                  Подберем релевантные графические референсы и сделаем минипрезентацию с демонстрацией возможных направлений в развитии образа бренда.</div>
+              </div>
+              <div class="col-6 col-xs-12 item mt-3 mt-sm-2">
+                <div class="item__title item__title_has-icon"><img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Презентация логотипа</div>
+                <div class="item__intro">
+                  Пришлет видеопрезентацию, в которой дизайнер проекта расскажет о возможных  вариантах логотипа. Нужно будет выбрать самый лучший и мы его доработаем.</div>
+              </div>
+              <div class="col-6 col-xs-12 item mt-3 mt-sm-2">
+                <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Полный гайдлайн</div>
+                <div class="item__intro">
+                  Всю работу мы соберём в единое руководство. Это гарантирует, что сотрудники и подрядчики будут понимать, как правильно работать 
+                  с вашим логотипом.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio mt-5"><a class="portfolio__col mt-xs-2" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-start"><img class="img-fluid" src="/demo/demo-preview.jpg"/>
+                <p class="portfolio__title text-small text-bold text-uppercase">Коучинг IFC стандарта</p>
+                <p class="portfolio__intro text-small">Логотип «Старт»</p></a><a class="portfolio__col mt-xs-2" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-guideline"><img class="img-fluid" src="/demo/demo-preview.jpg"/>
+                <p class="portfolio__title text-small text-bold text-uppercase">Школа флористики</p>
+                <p class="portfolio__intro text-small">Логотип «Гайдлайн»</p></a><a class="portfolio__col mt-xs-2" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-full"><img class="img-fluid" src="/demo/demo-preview.jpg"/>
+                <p class="portfolio__title text-small text-bold text-uppercase">Эстетическая медицина</p>
+                <p class="portfolio__intro text-small">Логотип «Full»</p></a>
+        </div>
+        <div class="row pt-2 pb-2 mt-5">
+          <div class="col-4 col-lg-8 col-md-10 col-sm-12 mb-lg-3 text-grey">
+            <h3 class="text-white mb-3 mb-lg-2">Решения на&nbsp;любой <span class="text-green">бюджет </span></h3>
+            <div class="content-intro">
+              <p>
+                Мы хотим помочь вашему проекту обрести своё уникальное лицо При этом понимаем, что иногда нужна возможность начать с небольших вложений. 
+                А кто-то напротив хочется получить больше и готов за это платить.
+              </p>
+              <p>Поэтому помимо основного тарифа «Гайдлайн» есть ещё два: подороже и подешевле.</p>
+            </div>
+          </div>
+          <div class="col-8 col-lg-12">
+            <div class="item item_price item_price-promo mb-2" data-fancybox="guideline" data-src="#guideline">
+              <div class="item_price__content">
+                <p class="item_price__title">Гайдлайн</p>
+                <p class="item_price__intro">
+                  Работаем так: заполняем бриф, проводим анализ конкурентов и рисуем несколько вариантов логотипа. Создаём гайдлайн.</p>
+                <div class="item_price__group">
+                  <div class="item_price__label">до 3 эскизов</div>
+                  <div class="item_price__label">видеопрезентация</div>
+                  <div class="item_price__label">гайдлайн</div>
+                </div>
+              </div>
+              <div class="item_price__info">
+                <p class="item_price__title">15000</p>
+                <div class="item_price__add">+2000</div>
+                <div class="item_price__add-intro">за подготовку 1 макета полиграфии в печать</div>
+              </div>
+            </div>
+            <div class="item item_price mb-2" data-fancybox="start" data-src="#start">
+              <div class="item_price__content">
+                <p class="item_price__title">Старт</p>
+                <p class="item_price__intro">
+                  Эконом-вариант разработки: вы получите 1 вариант логотипа и логобук вместо гайдлайна. Меньше выбор, но так же красиво.</p>
+                <div class="item_price__group">
+                  <div class="item_price__label">1 эскиз</div>
+                  <div class="item_price__label">логобук</div>
+                </div>
+              </div>
+              <div class="item_price__info">
+                <p class="item_price__title">6000</p>
+                <div class="item_price__add">+3000</div>
+                <div class="item_price__add-intro">за дополнительный эскиз</div>
+                <div class="item_price__add">+4000</div>
+                <div class="item_price__add-intro">за разработку гайдлайна</div>
+              </div>
+            </div>
+            <div class="item item_price" data-fancybox="full" data-src="#full">
+              <div class="item_price__content">
+                <p class="item_price__title">Гайдлайн+</p>
+                <p class="item_price__intro">
+                  В дополнение к основному тарифу подготовим до 4-ёх файлов полиграфии в печати по тех. требованием типографии.</p>
+                <div class="item_price__group">
+                  <div class="item_price__label">до 3 эскизов</div>
+                  <div class="item_price__label">видеопрезентация</div>
+                  <div class="item_price__label">гайдлайн</div>
+                </div>
+              </div>
+              <div class="item_price__info">
+                <p class="item_price__title">21000</p>
+                <div class="item_price__add">+3000</div>
+                <div class="item_price__add-intro">за дополнительный эскиз</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-main mt-5">
+          <h4 class="content-main__title content-main__title_secondary">
+            Сейчас мы простыми словами расскажем, в&nbsp;чём разница между логобуком и&nbsp;гайдлайном.</h4><span class="content-main__subtitle">difference</span>
+          <div class="row justify-content-end mt-3">
+            <div class="col-4">
+              <p class="lead text-bolder">Логобук содержит:</p>
+              <p class="content-main__list">описание логотипа</p>
+              <p class="content-main__list">альтернативные версии лого</p>
+              <p class="content-main__list">правила использования</p>
+              <p class="content-main__list">рекомендации по размещению</p>
+            </div>
+            <div class="col-4">
+              <p class="lead text-bolder">Гайдлайн содержит:</p>
+              <p class="content-main__list">описание логотипа</p>
+              <p class="content-main__list">альтернативные версии лого</p>
+              <p class="content-main__list">правила использования</p>
+              <p class="content-main__list">рекомендации по размещению</p>
+              <p class="content-main__list">элементы фирменного стиля (шрифты, цветовая гамма, паттерны и т.д.)</p>
+              <p class="content-main__list">примеры использования логотипа на носителях</p>
+              <p class="content-main__list">рекомендации по использованию общего стиля</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 mt-sm-3">
+          <div class="col-5 col-lg-10 col-sm-12">
+            <P class="h3 mb-0">Посмотрите как будет выглядеть готовый <span class="text-green">гайдлайн</span></P>
+          </div>
+        </div>
+        <div class="row mt-2 align-items-end">
+          <div class="col-8 col-lg-10 col-sm-12">
+            <p>
+              Продемонстрируем допустимые и&nbsp;недопустимые варианты использования логотипа Для фирменных цветоы подберем цветовые значения RGB и #HEX для использования в web 
+              и значения CMYK и Pantone для печати. Пропишем, какую гарнитуру и размеры использовать 
+              для заголовков, слоганов, основных текстовых блоков и подписей поменьше.
+              Оформим до 6 фирменных предметов, которые важны для вашего бренда.
+            </p>
+          </div>
+        </div>
+        <div class="service mt-3">
+          <div class="item item_service service__col service__col--first">
+            <div class="item__title">фирменные носители</div>
+            <div class="item_service__image item_service__image--first" style="background-image:url('/demo/fullstack.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">правила использования</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">фирменные шрифты</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">цветовая палитра</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">элементы фирменного стиля</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')">               </div>
+          </div>
+        </div>
+      </section>
+      <aside class="container__inner content-form">
+        <div class="row">
+          <div class="col-8 col-md-12">
+            <h4 class="h3"><span class="text-green">Pro</span>консультируем бесплатно. <span class="d-block">И честно<span class="text-green">.</span></span></h4>
+            <p class="content-form__intro">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</p>
+            <form class="form content-form__form">
+              <div class="form__group row">
+                <div class="col-6 col-xs-12">
+                  <input class="input input--full" type="Email" placeholder="E-mail"/>
+                </div>
+                <div class="col-6 col-xs-12">
+                  <input class="input input--has-validation input--full phone" type="tel" placeholder="Телефон *"/>
+                  <div class="form__validation error_phone error">Укажите корректный номер</div>
+                </div>
+              </div>
+              <div class="form__group row">
+                <div class="col-6 col-xs-12">
+                  <input class="input input--full" type="text" placeholder="Ваш бюджет?"/>
+                </div>
+                <div class="col-6 col-xs-12">
+                  <input class="input input--full" type="text" placeholder="Какая услуга интересует?"/>
+                </div>
+              </div>
+              <div class="form__group">
+                <div class="mt-1 mb-3 form__agree checkbox">
+                  <input class="checkbox__input" id="agreeInline" type="checkbox" name="agreeInline" checked="checked" required="required"/>
+                  <label class="checkbox__label" for="agreeInline">согласен с обработкой <a class="form__link-inverse" href="/policy.pdf" target="_blank">персональных данных</a></label>
+                </div>
+                <button class="btn btn_action" type="submit">Обсудить проект</button>
+              </div>
+            </form>
+          </div>
+          <div class="col-4 d-md-none"><svg class="content-form__animation" id="parent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
+<path id="path" fill="none" stroke="#3e3e3e" stroke-width="2" stroke-dasharray="10" d="M 25, 250 a 225,225 0 1,0 450,0 a 225,225 0 1,0 -450,0"/>
+<circle id="elem" cx="0" cy="0" r="14" fill="#3e3e3e"/>
+<animateMotion xlink:href="#elem" dur="6s" begin="0s" fill="freeze" restart="whenNotActive" repeatCount="indefinite">
+<mpath xlink:href="#path" />
+</animateMotion>
+</svg>
+          </div>
+        </div>
+      </aside>
     </div>
     <footer class="container">
       <div class="footer container__inner">
@@ -175,5 +407,9 @@
         </div>
       </form>
     </div>
+    <script src="./js/jquery.inputmask.min.js"></script>
+    <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
+    <script src="./js/jquery.fancybox.min.js"></script>
+    <script src="./js/app.min.js"></script>
   </body>
 </html>
