--- a/public/logo.html
+++ b/public/logo.html
@@ -127,6 +127,123 @@
                 <p class="portfolio__title text-small text-bold text-uppercase">Эстетическая медицина</p>
                 <p class="portfolio__intro text-small">Логотип «Full»</p></a>
         </div>
+        <div class="content-compare">
+          <div class="row justify-content-between">
+            <div class="col-3 col-md-12 col-xs-12 mb-md-3">
+              <div class="content-compare__image" style="background-image: url('../demo/prototype-line.png');"></div>
+            </div>
+            <div class="col-8 col-lg-9 col-md-12">
+              <div class="row mb-3">
+                <div class="col-6 col-sm-5 col-xs-12 mb-xs-2">
+                  <h3>Как найти идеальное решение?</h3>
+                </div>
+                <div class="col-6 col-sm-7 col-xs-12">
+                  <p>
+                    Вам нужен логотип, но вы не знаете, какой тарифрый план для вас наиболее подходящий? Вот простое пояснение, какие возможности даст вам тариф.</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4 mb-2">
+                  <div class="item item_advantage">
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <div class="item_advantage__title">«Старт»<br/>срок от 7 дней</div>
+                    <div class="item__intro mt-2 mb-2">
+                      У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.</div>
+                    <div class="item__label">минипрезентация</div>
+                    <div class="item__label">1 эскиз</div>
+                    <div class="item__label">логобук</div>
+                  </div>
+                </div>
+                <div class="col-4 mb-2">
+                  <div class="item item_advantage">
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <div class="item_advantage__title">«Старт»<br/>срок от 7 дней</div>
+                    <div class="item__intro mt-2 mb-2">
+                      У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.</div>
+                    <div class="item__label">минипрезентация</div>
+                    <div class="item__label">1 эскиз</div>
+                    <div class="item__label">логобук</div>
+                  </div>
+                </div>
+                <div class="col-4 mb-2">
+                  <div class="item item_advantage">
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <svg class="item__icon item_advantage__positive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                      <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                    </svg>
+                    <div class="item_advantage__title">«Старт»<br/>срок от 7 дней</div>
+                    <div class="item__intro mt-2 mb-2">
+                      У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.</div>
+                    <div class="item__label">минипрезентация</div>
+                    <div class="item__label">1 эскиз</div>
+                    <div class="item__label">логобук</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-main mt-5">
+          <h4 class="content-main__title content-main__title_secondary">Разработка логотипа — это взаимопонимание и доверие. И мы <span class="text-green">делаем всё </span>для комфортного сотрудничества.</h4><span class="content-main__subtitle">преимущества</span>
+          <div class="row justify-content-end mt-3">
+            <div class="col-4">
+              <p class="content-main__list">описание логотипа</p>
+              <p class="content-main__list">альтернативные версии лого</p>
+              <p class="content-main__list">правила использования</p>
+              <p class="content-main__list">рекомендации по размещению</p>
+            </div>
+            <div class="col-4">
+              <p class="content-main__list">описание логотипа <span class="modal-info">info</span></p>
+              <p class="content-main__list">альтернативные версии лого</p>
+              <p class="content-main__list">правила использования</p>
+              <p class="content-main__list">рекомендации по размещению    </p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 mt-sm-3">
+          <div class="col-5 col-lg-10 col-sm-12">
+            <P class="h3 mb-0">Так выглядит <span class="text-green">результат </span>работы над логотипом</P>
+          </div>
+        </div>
+        <div class="row mt-2 align-items-end">
+          <div class="col-8 col-lg-10 col-sm-12">
+            <p>Вы получите все исходные файлы в векторном формате, включая стилеобразующие элементы. PDF-руководство по использованию фирменного стиля. Оформим до 6 фирменных предметов, которые важны для вашего бренда.</p>
+          </div>
+        </div>
+        <div class="service mt-3">
+          <div class="item item_service service__col service__col--first">
+            <div class="item__title">фирменные носители</div>
+            <div class="item_service__image item_service__image--first" style="background-image:url('/demo/fullstack.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">правила использования</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">фирменные шрифты</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">цветовая палитра</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+          </div>
+          <div class="item item_service service__col mt-xs-1">
+            <div class="item__title">элементы фирменного стиля</div>
+            <div class="item_service__image" style="background-image:url('/demo/small.png')">               </div>
+          </div>
+        </div>
         <div class="row pt-2 pb-2 mt-5">
           <div class="col-4 col-lg-8 col-md-10 col-sm-12 mb-lg-3 text-grey">
             <h3 class="text-white mb-3 mb-lg-2">Решения на&nbsp;любой <span class="text-green">бюджет </span></h3>
@@ -156,39 +273,51 @@
                 <div class="item_price__add-intro">за подготовку 1 макета полиграфии в печать</div>
               </div>
             </div>
-            <div class="item item_price mb-2" data-fancybox="start" data-src="#start">
-              <div class="item_price__content">
-                <p class="item_price__title">Старт</p>
-                <p class="item_price__intro">
-                  Эконом-вариант разработки: вы получите 1 вариант логотипа и логобук вместо гайдлайна. Меньше выбор, но так же красиво.</p>
-                <div class="item_price__group">
-                  <div class="item_price__label">1 эскиз</div>
-                  <div class="item_price__label">логобук</div>
+            <div class="row"> 
+              <div class="col-6 col-lg-12 mt-2">
+                <div class="item item_price mb-2" data-fancybox="start" data-src="#start">
+                  <div class="item_price__content">
+                    <p class="item_price__title">Старт</p>
+                  </div>
+                  <div class="item_price__info">
+                    <p class="item_price__title">6000</p>
+                  </div>
+                  <div class="mt-2">
+                    <p class="item_price__intro">
+                      Эконом-вариант разработки: вы получите 1 вариант логотипа и логобук вместо гайдлайна. Меньше выбор, но так же красиво.</p>
+                    <div class="item_price__group">
+                      <div class="item_price__label">1 эскиз</div>
+                      <div class="item_price__label">логобук</div>
+                    </div>
+                  </div>
+                  <div class="mt-2">
+                    <div class="item_price__add">+3000</div>
+                    <div class="item_price__add-intro">за дополнительный эскиз</div>
+                  </div>
                 </div>
               </div>
-              <div class="item_price__info">
-                <p class="item_price__title">6000</p>
-                <div class="item_price__add">+3000</div>
-                <div class="item_price__add-intro">за дополнительный эскиз</div>
-                <div class="item_price__add">+4000</div>
-                <div class="item_price__add-intro">за разработку гайдлайна</div>
-              </div>
-            </div>
-            <div class="item item_price" data-fancybox="full" data-src="#full">
-              <div class="item_price__content">
-                <p class="item_price__title">Гайдлайн+</p>
-                <p class="item_price__intro">
-                  В дополнение к основному тарифу подготовим до 4-ёх файлов полиграфии в печати по тех. требованием типографии.</p>
-                <div class="item_price__group">
-                  <div class="item_price__label">до 3 эскизов</div>
-                  <div class="item_price__label">видеопрезентация</div>
-                  <div class="item_price__label">гайдлайн</div>
+              <div class="col-6 col-lg-12 mt-2">
+                <div class="item item_price" data-fancybox="full" data-src="#full">
+                  <div class="item_price__content">
+                    <p class="item_price__title">Гайдлайн+</p>
+                  </div>
+                  <div class="item_price__info">
+                    <p class="item_price__title">21000</p>
+                  </div>
+                  <div class="mt-2">
+                    <p class="item_price__intro">
+                      В дополнение к основному тарифу подготовим до 4-ёх файлов полиграфии в печати по тех. требованием типографии.</p>
+                    <div class="item_price__group">
+                      <div class="item_price__label">до 3 эскизов</div>
+                      <div class="item_price__label">видеопрезентация</div>
+                      <div class="item_price__label">гайдлайн</div>
+                    </div>
+                  </div>
+                  <div class="mt-2">
+                    <div class="item_price__add">+3000</div>
+                    <div class="item_price__add-intro">за дополнительный эскиз</div>
+                  </div>
                 </div>
-              </div>
-              <div class="item_price__info">
-                <p class="item_price__title">21000</p>
-                <div class="item_price__add">+3000</div>
-                <div class="item_price__add-intro">за дополнительный эскиз</div>
               </div>
             </div>
           </div>
@@ -216,41 +345,15 @@
             </div>
           </div>
         </div>
-        <div class="row mt-5 mt-sm-3">
-          <div class="col-5 col-lg-10 col-sm-12">
-            <P class="h3 mb-0">Посмотрите как будет выглядеть готовый <span class="text-green">гайдлайн</span></P>
+        <div class="mt-5">
+          <p class="h4 text-white mb-3 mb-lg-2">FAQ</p>
+          <div class="faq">
+            <div class="faq__title" data-toggle="true">Praesentium voluptatum deleniti atque corrupti, quos dolores eos</div>
+            <div class="faq__content">Temporibus autem vel illum, qui in culpa. Aut reiciendis voluptatibus maiores alias consequatur. Optio, cumque nihil impedit, quo minus. Reprehenderit, qui molestiae consequatur, vel eum iure reprehenderit. Neque porro quisquam est, omnis iste natus error sit voluptatem accusantium. Velit, sed ut aut officiis debitis aut rerum facilis est eligendi optio</div>
           </div>
-        </div>
-        <div class="row mt-2 align-items-end">
-          <div class="col-8 col-lg-10 col-sm-12">
-            <p>
-              Продемонстрируем допустимые и&nbsp;недопустимые варианты использования логотипа Для фирменных цветоы подберем цветовые значения RGB и #HEX для использования в web 
-              и значения CMYK и Pantone для печати. Пропишем, какую гарнитуру и размеры использовать 
-              для заголовков, слоганов, основных текстовых блоков и подписей поменьше.
-              Оформим до 6 фирменных предметов, которые важны для вашего бренда.
-            </p>
-          </div>
-        </div>
-        <div class="service mt-3">
-          <div class="item item_service service__col service__col--first">
-            <div class="item__title">фирменные носители</div>
-            <div class="item_service__image item_service__image--first" style="background-image:url('/demo/fullstack.png')"></div>
-          </div>
-          <div class="item item_service service__col mt-xs-1">
-            <div class="item__title">правила использования</div>
-            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
-          </div>
-          <div class="item item_service service__col mt-xs-1">
-            <div class="item__title">фирменные шрифты</div>
-            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
-          </div>
-          <div class="item item_service service__col mt-xs-1">
-            <div class="item__title">цветовая палитра</div>
-            <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
-          </div>
-          <div class="item item_service service__col mt-xs-1">
-            <div class="item__title">элементы фирменного стиля</div>
-            <div class="item_service__image" style="background-image:url('/demo/small.png')">               </div>
+          <div class="faq mt-2">
+            <div class="faq__title demo de" data-toggle="true">Praesentium voluptatum deleniti atque corrupti, quos dolores eos</div>
+            <div class="faq__content">Temporibus autem vel illum, qui in culpa. Aut reiciendis voluptatibus maiores alias consequatur. Optio, cumque nihil impedit, quo minus. Reprehenderit, qui molestiae consequatur, vel eum iure reprehenderit. Neque porro quisquam est, omnis iste natus error sit voluptatem accusantium. Velit, sed ut aut officiis debitis aut rerum facilis est eligendi optio</div>
           </div>
         </div>
       </section>
