--- a/public/tilda.html
+++ b/public/tilda.html
@@ -238,6 +238,49 @@
             </div>
           </div>
         </div>
+        <div class="mt-5"> 
+          <div class="table">
+            <div class="table__head">
+              <div class="table__head-main">&nbsp;</div>
+              <div class="table__head-item">Standart</div>
+              <div class="table__head-item">Business</div>
+            </div>
+            <div class="table__line">
+              <div class="table__line-main"> 
+                <p class="text-bolder mb-0">Создание дизайна под бизнес</p>
+                <p class="text-grey">
+                  Каждый элемент на сайте – результат тщательного изучения ниши, анализа конкурентов и погружения в тему.</p>
+              </div>
+              <div class="table__line-item">
+                <svg class="table__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve" fill="#c1ea1d">
+                  <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                </svg>
+              </div>
+              <div class="table__line-item">
+                <svg class="table__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve" fill="#c1ea1d">
+                  <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                </svg>
+              </div>
+            </div>
+            <div class="table__line">
+              <div class="table__line-main">
+                <p class="text-bolder mb-0">Красивое отображение на всех экранах</p>
+                <p class="text-grey">
+                  Сайт будет корректно отображаться во всех разрешениях: от широкоформатных экранов компьютера до миниатюрных смартфонов.</p>
+              </div>
+              <div class="table__line-item">
+                <svg class="table__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve" fill="#c1ea1d">
+                  <path d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z"></path>
+                </svg>
+              </div>
+              <div class="table__line-item">
+                <svg class="table__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve" fill="#c62024">
+                  <path d="M15.5,65.7C9.3,60.1,4.7,52.8,2.8,44.5C1.3,38.5,2,35.1,2,35.1c1.2-13.6,10.8-24.9,24.1-24.9c8.3,0,15.2,4.4,19.4,11l0,0L31.8,41.2l26.7,3.6L37.5,64L53,73.7l-6.7,20L15.5,65.7z M97.1,44.5c-1.9,8.3-6.5,15.6-12.7,21.2L54.9,92l6.6-19.9l-13.9-8.7l23.2-21.3l-28.6-3.8c0,0,6.3-11.2,8.7-14.7c5.1-7.8,12.5-13.4,21.8-13.4c13.3,0,23.9,11.4,25.1,24.9C97.9,35.1,98.5,38.5,97.1,44.5z"></path>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row pt-2 pb-2 mt-5">
           <div class="col-4 col-lg-8 col-md-10 col-sm-12 mb-lg-3 text-grey">
             <h4 class="text-white mb-3 mb-lg-2">Сделаем всё  <span class="d-block">качественно и&nbsp;в&nbsp;срок<span class="text-green">.</span></span></h4>
