--- a/public/index.html
+++ b/public/index.html
@@ -151,25 +151,35 @@
             </div>
           </div>
           <div class="service service_category mt-3">
-            <div class="service__col service__col_first item item_service">
-              <div class="item__title item_service__title">fullstack development</div>
-              <div class="item_service__image item_service__image_large" style="background-image:url('/demo/fullstack.png')"></div>
+            <div class="service__col service__col_first">
+              <div class="item item_service">
+                <div class="item__title item_service__title">fullstack development</div>
+                <div class="item_service__image item_service__image_large" style="background-image:url('/demo/fullstack.png')"></div>
+              </div>
             </div>
-            <div class="service__col item item_service">
-              <div class="item__title item_service__title">google ads & yandex direct</div>
-              <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+            <div class="service__col item">
+              <div class="item item_service">
+                <div class="item__title item_service__title">google ads & yandex direct</div>
+                <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+              </div>
             </div>
-            <div class="service__col item item_service">
-              <div class="item__title item_service__title">create content</div>
-              <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+            <div class="service__col">
+              <div class="item item_service">
+                <div class="item__title item_service__title">create content</div>
+                <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+              </div>
             </div>
-            <div class="service__col item item_service">
-              <div class="item__title item_service__title">graphic design</div>
-              <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+            <div class="service__col">
+              <div class="item item_service">
+                <div class="item__title item_service__title">graphic design</div>
+                <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+              </div>
             </div>
-            <div class="service__col item item_service">
-              <div class="item__title item_service__title">support</div>
-              <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+            <div class="service__col">
+              <div class="item item_service">
+                <div class="item__title item_service__title">support</div>
+                <div class="item_service__image" style="background-image:url('/demo/small.png')"></div>
+              </div>
             </div>
           </div>
           <div class="content-main mt-5 mt-sm-3">
