--- a/public/index.html
+++ b/public/index.html
@@ -262,6 +262,9 @@
       </div>
     </footer>
     <div class="overlay overlay--disable"></div>
+    <svg class="go-top" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M5.84314 13.4069L11.5 7.75L17.1569 13.4069L16.4497 14.114L11.5 9.1642L6.55025 14.114L5.84314 13.4069Z"></path>
+    </svg>
     <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
     <script src="./js/jquery.fancybox.min.js"></script>
     <script src="./js/jquery.inputmask.min.js"></script>
