--- a/public/tilda.html
+++ b/public/tilda.html
@@ -133,7 +133,7 @@
               </div></a><a class="portfolio__col" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-guest">
               <div class="item item_link">
                 <p class="item__title">«Свидетель»</p>
-                <p class="item__intro">Круглосуточная юридическая помощь на дорогах</p><img class="img-fluid" src="/img/promo-page-2.jpg"/>
+                <p class="item__intro">Круглосуточная помощь на дорогах</p><img class="img-fluid" src="/img/promo-page-2.jpg"/>
               </div></a><a class="portfolio__col" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-promo">
               <div class="item item_link">
                 <p class="item__title">Личный стилист</p>
