--- a/public/logo.html
+++ b/public/logo.html
@@ -67,8 +67,8 @@
         <section class="content-main">
           <h1 class="content-main__title">
              Полностью оформим ваш <span class="text-green">проект</span> в&nbsp;единый гайдлайн</h1><span class="content-main__subtitle">graphic design</span>
-          <div class="row justify-content-end mt-3">
-            <div class="col-5">
+          <div class="row justify-content-end mt-3 mt-md-2">
+            <div class="col-5 col-xl-6 col-lg-7 col-md-9 col-sm-12">
               <div class="content-main__intro">
                 <p>
                   Создадим для вас неповторимый стиль и&nbsp;составим подробное руководство по&nbsp;его использованию: цвета, шрифты и&nbsp;примеры фирменных носителей</p>
@@ -182,32 +182,27 @@
           <div class="service service_category mt-3">
             <div class="service__col service__col_first">
               <div class="item item_service">
-                <div class="item__title item_service__title">фирменные носители </div>
-                <div class="item_service__image item_service__image_large" style="background-size:cover; background-image:url('/img/logo-example-0.jpg')"></div>
+                <div class="item__title item_service__title">фирменные носители </div><img class="item_service__image d-sm-none" src="/img/logo-example-0.jpg"/><img class="item_service__image d-none d-sm-block" src="/img/logo-example-0-mobile.jpg"/>
               </div>
             </div>
             <div class="service__col item">
               <div class="item item_service">
-                <div class="item__title item_service__title">фирменные шрифты</div>
-                <div class="item_service__image" style="background-image:url('/img/logo-example-2.png')"></div>
+                <div class="item__title item_service__title">фирменные шрифты</div><img class="item_service__image" src="/img/logo-example-2.png"/>
               </div>
             </div>
             <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">фирменные цвета</div>
-                <div class="item_service__image" style="background-image:url('/img/logo-example-3.png')"></div>
+                <div class="item__title item_service__title">фирменные цвета</div><img class="item_service__image" src="/img/logo-example-3.png"/>
               </div>
             </div>
             <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">правила использования логотипа</div>
-                <div class="item_service__image" style="background-image:url('/img/logo-example-1.png')"></div>
+                <div class="item__title item_service__title">правила использования логотипа</div><img class="item_service__image" src="/img/logo-example-1.png"/>
               </div>
             </div>
             <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">стилеобразующие элементы</div>
-                <div class="item_service__image" style="background-image:url('/img/logo-example-4.png')"></div>
+                <div class="item__title item_service__title">стилеобразующие элементы</div><img class="item_service__image" src="/img/logo-example-4.png"/>
               </div>
             </div>
           </div>
@@ -270,6 +265,37 @@
                       <div class="item__label">видеопрезентация</div>
                       <div class="item__label">файлы в печать</div>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="content-main mt-5 mt-sm-3">
+            <h4 class="content-main__title content-main__title_secondary">Разрушаем мифы: кратко и&nbsp;<span class="text-green">ёмко </span>о&nbsp;популярных дизайн-«суевериях»</h4><span class="content-main__subtitle">MythBusters</span>
+            <div class="row justify-content-end mt-3 mt-md-2">
+              <div class="col-5 col-xl-6 col-lg-7 col-md-9 col-sm-12">
+                <p>
+                  Сейчас мы расскажем всё, что вы хотели знать, но стеснялись спросить. Начнём с того, что логотип — это часть фирменного стиля. 
+                  Если поставить лого в углу сайта не стоит рассчитывать на то, что бренд  
+                  обретет узнаваемость.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="service service_dialog mt-3">
+            <div class="service__col">
+              <div class="item item_steps">
+                <div class="item_steps__subtitle mb-1">Миф 1</div>
+                <p>«По логотипу сразу должна быть понятна сфера деятельности»</p>
+                <div class="dialog">
+                  <div class="dialog__image" style="background-image:url('./icon/girl.png');"></div>
+                  <div class="dialog__content">— Как клиенты поймут что у меня кофейня, если нет значка кофе и&nbsp;чашечки?</div>
+                </div>
+                <div class="dialog dialog_answer">
+                  <div class="dialog__image" style="background-image:url('./icon/girl.png');"></div>
+                  <div class="dialog__content">
+                    Действительно, никак. Но клиенты всегда видят логотип в&nbsp;контексте: на&nbsp;сайте, на&nbsp;флаере или на&nbsp;вывеске около витрины. Именно контекст раскроет сферу. Вспомните Nike, Puma или&nbsp;Starbucks. 
+                    Если бы&nbsp;прямая отсылка была обязательно, то&nbsp;у&nbsp;Nike на&nbsp;лого был бы&nbsp;кроссовок.
                   </div>
                 </div>
               </div>
